docs: changed swagger comments and regenerate
